--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Cookie </title>
+    <title> Cookie & Cooco </title>
   </head>
   <body>
-    <h1> Cookie </h1>
+    <h1> Cookie & Cooco </h1>
   </body>
 </html>
