--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Cookie & Cooco </title>
+    <title> "Cookie & Cooco" </title>
+    <style>
+      body {
+        background-color: black;
+        text-align: center;
+        padding: 200px;
+      }
+      h1 {
+        font-size: 60px;
+        color: #eeee33;
+      }
+    </style>
   </head>
   <body>
-    <h1> Cookie & Cooco </h1>
+    <h1> "Cookie & Cooco" </h1>
   </body>
 </html>
